Deformation Motion Blur makes objects render in wrong render layer? #40320

Closed
opened 2014-05-22 19:31:01 +02:00 by Juan Pablo Bouza · 8 comments

hash: 97d047a 2014/5/22
Kubuntu 13.04 64bits{F89727}

Ok, this is a total weirdo. I'm attaching the blend file where this happens, but I can't reproduce the error in a new blend. This just started to happen in the file, and I don't know why....well, here it goes...

In the blend you'll see a white plane and an orange plane. They are in different layers and render layers. For some reason, when I you render the scene, the orange plane appears also in the layer corresponding to the white plane, and viceversa.... The behaviour is constant, but can "randomly" disappear if you, for example, delete some of the objects...
I'm blaming deformation Mblur cause this happens when the object in question is deformed. When the object becomes stationary and has no blur applied, it renders in the correct layer.
Also, if you turn off deformation mblur in the object property, it renders correctly.

Well, this is really strange, but I hope that if you debug the scene you will find out what's wrong, may it be for discovering that the blend is corrupt, or for finding a real blender bug.

PS: about the blend being corrupt, I appended the scene into a new blend and had the same behaviour.

hash: 97d047a 2014/5/22 Kubuntu 13.04 64bits{[F89727](https://archive.blender.org/developer/F89727/def_mblur_layers_bug.blend)} Ok, this is a total weirdo. I'm attaching the blend file where this happens, but I can't reproduce the error in a new blend. This just started to happen in the file, and I don't know why....well, here it goes... In the blend you'll see a white plane and an orange plane. They are in different layers and render layers. For some reason, when I you render the scene, the orange plane appears also in the layer corresponding to the white plane, and viceversa.... The behaviour is constant, but can "randomly" disappear if you, for example, delete some of the objects... I'm blaming deformation Mblur cause this happens when the object in question is deformed. When the object becomes stationary and has no blur applied, it renders in the correct layer. Also, if you turn off deformation mblur in the object property, it renders correctly. Well, this is really strange, but I hope that if you debug the scene you will find out what's wrong, may it be for discovering that the blend is corrupt, or for finding a real blender bug. PS: about the blend being corrupt, I appended the scene into a new blend and had the same behaviour.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4
Author
Member
[def_mblur_layers_bug.blend](https://archive.blender.org/developer/F89728/def_mblur_layers_bug.blend)
Brecht Van Lommel was assigned by Sergey Sharybin 2014-05-23 10:25:55 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Brecht, mind having a look here? Thanks! :)

Brecht, mind having a look here? Thanks! :)

This issue was referenced by f8ce417eba

This issue was referenced by f8ce417eba0c4b52e00f32a4b54c195cb41ecf7f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f8ce417eba.

Closed by commit f8ce417eba.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40320
No description provided.