Fix T40320: wrong render layer visibility with cycles deformation motion blur.